--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.social-btn {
+  display: static;
+  height: 40px;
+  width: 80px;
+  background: #17a2b8;
+  border: 2px solid #eaedf2;
+  padding: 5px, 5px, 5px, 5px;
+  margin: 5px;
+  text-align: center;
+}
