--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,4 +2,18 @@
 <p>Find me in app/views/posts/show.html.erb</p>
 
 <h1><%= @post.title %></h1>
-<p><%= @post.body %></p>
+
+<div class="row">
+ <div class="col-md-8">
+   <p><%= @post.body %></p>
+ </div>
+ <div class="col-md-4">
+   <!-- format a link as an Edit button to direct users to /posts/@post.id/edit
+    edit_post_path(@post) is a helper method generated in routes.rb by resources :posts -->
+   <%= link_to "Edit", edit_post_path(@post), class: 'btn btn-success' %>
+   <!-- link_to to create a delete button. override the default method (:post) with :delete
+    so when button is pressed, the route called is the delete route. styled with class. pass
+    a Hash with confirm: key to the data: arg. confirms the action with a JS confirmation dialog box.-->
+   <%= link_to "Delete Post", @post, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this post?'} %>
+ </div>
+</div>
