--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -10,7 +10,7 @@
      </ul>
    </div>
    <div class="col-md-8">
-     <%= form_for @post do |f| %>
+     <%= form_for [@topic, @post] do |f| %>
        <div class="form-group">
          <%# use f.lable to display title. provided by form_for, which yeilds a form builder object that provides f.label
           which then creates an HTML label tag for the object specified. #%>
