--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,12 +8,9 @@
    <p><%= @post.body %></p>
  </div>
  <div class="col-md-4">
-   <!-- format a link as an Edit button to direct users to /posts/@post.id/edit
-    edit_post_path(@post) is a helper method generated in routes.rb by resources :posts -->
-   <%= link_to "Edit", edit_post_path(@post), class: 'btn btn-success' %>
-   <!-- link_to to create a delete button. override the default method (:post) with :delete
-    so when button is pressed, the route called is the delete route. styled with class. pass
-    a Hash with confirm: key to the data: arg. confirms the action with a JS confirmation dialog box.-->
-   <%= link_to "Delete Post", @post, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this post?'} %>
+   <!-- we replace edit_post_path with edit_topic_post_path, which takes two arguments, a topic and a post. -->
+   <%= link_to "Edit", edit_topic_post_path(@post.topic, @post), class: 'btn btn-success' %>
+   <!-- update link_to to take an array consisting of a topic and post, which it uses to build the link to delete a nested post.-->
+   <%= link_to "Delete Post", [@post.topic, @post], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this post?' } %>
  </div>
 </div>
