--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -10,22 +10,6 @@
      </ul>
    </div>
    <div class="col-md-8">
-     <%= form_for [@topic, @post] do |f| %>
-       <div class="form-group">
-         <%# use f.lable to display title. provided by form_for, which yeilds a form builder object that provides f.label
-          which then creates an HTML label tag for the object specified. #%>
-         <%= f.label :title %>
-         <%# another method from FormHelper that creats an input tag of type text #%>
-         <%= f.text_field :title, class: 'form-control', placeholder: "Enter post title" %>
-       </div>
-       <div class="form-group">
-         <%= f.label :body %>
-         <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter post body" %>
-       </div>
-       <div class="form-group">
-         <%# f.submit yields an input tag of type submit #%>
-         <%= f.submit "Save", class: 'btn btn-success' %>
-       </div>
-     <% end %>
+     <%= render partial: 'form', locals: { topic: @topic, post: @post } %>
    </div>
  </div>
