--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   <%= csrf_meta_tags %>
 
   <%-# instructs browser on small, high high-pixel density screens -%>
-   <%-# to display our pages at a regular, readable size -%>
+  <%-# to display our pages at a regular, readable size -%>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -18,6 +18,7 @@
         <li><%= link_to "Bloccit", root_path %></li>
         <li><%= link_to "Topics", topics_path %></li>
         <li><%= link_to "About", about_path %></li>
+        <li class="pull-right"><%= link_to "Sign Up", new_user_path %></li>
     </ul>
 
     <% if flash[:notice] %>
