--- a/app/views/users/confirm.html.erb
+++ b/app/views/users/confirm.html.erb
@@ -9,5 +9,10 @@
   </div>
 </div>
 
-<%= button_to "Yes", { :controller => 'users', :action => 'create', :params => params}, class: 'btn btn-success' %>
-<%= button_to "No", { :controller => 'users', :action => 'new'}, class: 'btn btn-failure', :method => :get %>
+<div class="row">
+<%= button_to "Yes", { :controller => 'users', :action => 'create', :params => params.permit!}, class: 'btn btn-success' %>
+</div>
+
+<div class="col-md-4", style="width: auto;">
+<%= button_to "No", { :controller => 'users', :action => 'new'}, class: 'btn btn-warning', :method => :get %>
+</div>
