--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,8 @@
         <li><%= link_to "Topics", topics_path %></li>
         <li><%= link_to "About", about_path %></li>
         <% if current_user %>
-          <li class="pull-right"><%= link_to "#{current_user.name} -Sign Out", session_path(current_user), method: :delete %></li>
+          <li class="pull-right"><%= link_to "#{current_user.name} -Sign Out", session_path(current_user), method: :delete  %></li>
+          <li class="pull-right"><%= link_to(image_tag(avatar_url(current_user)), session_path(current_user), class: "gravatar-image")%>
         <% else %>
           <li class="pull-right"><%= link_to "Sign In", new_session_path %></li>
           <li class="pull-right"><%= link_to "Sign Up", new_user_path %></li>
