--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
    <div class="col-md-8">
      <div class="media">
-       <br />
+
        <%# call the avatar_url to fetch the current user's avatar %>
        <% avatar_url = @user.avatar_url(128) %>
        <% if avatar_url %>
@@ -23,7 +23,19 @@
 
  <%# display all of the user's posts and comments using partials. %>
  <h2>Posts</h2>
- <%= render @user.posts %>
+ <% if user_has_posts?(@user) %>
+   <%= render @user.posts %>
+ <% else %>
+   <p><%= @user.name %> has not submitted any posts yet.</p>
+ <% end %>
 
  <h2>Comments</h2>
- <%= render @user.comments %>
+ <% if user_has_comments?(@user) %>
+   <%= render @user.comments %>
+ <% else %>
+   <p><%= @user.name %> has not submitted any comments yet. </p>
+ <% end %>
+
+<h2> Favorites </h2>
+
+  <%= render @user.favorite_posts %>
