--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,10 +1,11 @@
 <div class="jumbotron">
- <h1>Bloccit</h1>
- <p>Bloccit is a resource for sharing links with your friends!</p>
- <p>
-   <%= link_to "Sign Up", new_user_path, class: 'btn btn-primary' %> today!
-   <%= link_to "Sign In", new_session_path %> or
- </p>
+   <h1>Bloccit</h1>
+   <p class="lead">Bloccit is a resource for sharing links with your friends!</p>
+ <hr class="my-4">
+   <p>
+     <%= link_to "Sign In", new_session_path, class: 'btn btn-primary' %> or
+     <%= link_to "Sign Up", new_user_path %> today!
+   </p>
 </div>
 
 <div class="row">
